--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     ],
     "license": "MIT",
     "dependencies": {
-        "gluegun": "^3.3.4"
+        "gluegun": "^3.3.4",
+        "opn": "^6.0.0"
     },
     "devDependencies": {
         "standard": "^12.0.1",
