--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     ],
     "license": "MIT",
     "dependencies": {
+        "child_process": "^1.0.2",
         "gluegun": "^3.3.4",
         "opn": "^6.0.0"
     },
