--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "license": "MIT",
     "dependencies": {
         "child_process": "^1.0.2",
+        "dotenv": "^8.2.0",
         "gluegun": "^3.3.4",
         "opn": "^6.0.0"
     },
